syntax = "proto3";
package proto;
option go_package = "actors/proto";

import "actor.proto";

message LinkPing {
  int64 SchedulerTime = 1;
  actor.PID Scheduler = 2;
  actor.PID Target = 3;
  int32 PayloadBytes = 4;
}

message LinkPong {
  int64 SchedulerTime = 1;
  actor.PID Scheduler = 2;
  actor.PID Source = 3;
  bytes DummyPayload = 4;
}

message LinkResponse {
  int64 SchedulerTime = 1;
  actor.PID Source = 2;
  actor.PID Target = 3;
}

message WorkerRegister {
  actor.PID Sender = 1;
}

message PeerBroadcast {
  actor.PID Sender = 1;
  repeated actor.PID Peers = 2;
}
